--- a/src/App.css
+++ b/src/App.css
@@ -11,5 +11,15 @@
 }
 
 .active{
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid black;
+}
+
+
+.nav-item{
+    padding: 5px 10px 5px 10px;
+}
+
+.nav-item:hover{
+    cursor: pointer;
+    color:burlywood;
 }
