--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 /* NAVBAR STYLING */
@@ -8,18 +9,41 @@
 .flex{
     display: flex;
     justify-content: space-between;
+    /* top: 5%; */
+    padding: 12px 0px 5px 0px;
+
 }
 
+.Nav{
+    background: white !important;
+    color: black !important;
+    /* height: 9vh; */
+    
+}
+.logo-section{
+}
+
+.logo-img{
+    width: 200px;
+    height: 50px;
+}
 .active{
     border-bottom: 2px solid black;
 }
 
-
+.Nav-links{
+padding-top: 10px;
+}
 .nav-item{
-    padding: 5px 10px 5px 10px;
+    padding: 0px 15px 5px 15px;
+    /* margin-top: 10px !important; */
+    margin-top: 15px !important;
+    
+
 }
 
 .nav-item:hover{
     cursor: pointer;
     color:burlywood;
+
 }
